# floppa-stats

./: .gitignore  .gitmodules  Cargo.toml  config.toml
src/: main.rs
static/: main.css
templates/: home.html
