[package]
name = "floppa-stats"
version = "2.0.1"
edition = "2021"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls-native-roots"]

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "http2",
  "charset"
] }
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.2"
